_old/compiler/src/test/resources/errors/missing_conclusion.jd
justification j {

    strategy s is "this is a strategy"

}